# fdb

./: Cargo.toml  LICENSE  diesel.toml  f.db
migrations/2024-12-25-070723_create_friends/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
templates/: create_friend.html  index.html
