[package]
name = "fdb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
diesel = { version = "2.2.6", features = ["returning_clauses_for_sqlite_3_35", "sqlite"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
